`[chore]`: db migration for token_account_balance -> token_account `[DRIP-245]` (#90)
* feat: db migration for token_account_balance -> token_account

* fix: compilation issues

* refactor: rename tokenAccountBalance(s) to tokenAccount(s)
